@@ -40,6 +40,7 @@ ONMOUSEOVER   = 0x00010
 ONMOUSEUP     = 0x00008
 ONMOUSEWHEEL  = 0x40000
 ONSCROLL      = 0x04000
+ONINPUT       = 0x80000
 
 FOCUSEVENTS   = 0x01800 # ONFOCUS | ONBLUR
 KEYEVENTS     = 0x00380 # ONKEYDOWN | ONKEYPRESS | ONKEYUP
